--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <div id="content">
       <!-- IMAGES, SMALL SUB HEADS, PARAGRAPHS, LINKS -->
-      <img src="./transportation/transit.jpg" alt="transit">
+      <img src="./transportation/transit.jpg" alt="Modern Transit">
       <img src="./transportation/camels-in-truck.jpg" alt="camels">
       <img src="./transportation/garden.jpg" alt="garden">
       
