--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
     <div id="content">
       <!-- IMAGES, SMALL SUB HEADS, PARAGRAPHS, LINKS -->
       <img src="./transportation/transit.jpg" alt="Modern Transit">
+      <h2>Travel</h2>
+      
       <img src="./transportation/camels-in-truck.jpg" alt="camels">
       <img src="./transportation/garden.jpg" alt="garden">
       
