--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
       <!-- IMAGES, SMALL SUB HEADS, PARAGRAPHS, LINKS -->
       <img src="./transportation/transit.jpg" alt="Modern Transit">
       <h2>Travel</h2>
+      <p>Once a mudbrick waystation along desert trading routes, Riyadh is now one of the wealthiest cities in the world. The country’s political, financial and administrative capital is also a city with a fascinating subtext.</p>
       
       <img src="./transportation/camels-in-truck.jpg" alt="camels">
       <img src="./transportation/garden.jpg" alt="garden">
